[package]
name = "stix-patterns-parser"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stix_patterns_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
pest = "2.8.4"
pest_derive = "2.8.4"
thiserror = "2.0"
chrono = "0.4"
